
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'groovy'
apply plugin: 'idea'
apply plugin: 'maven-publish'
//apply plugin: "io.github.gradle-nexus.publish-plugin"

group = 'com.morpheusdata'

sourceCompatibility = '1.11'
targetCompatibility = '1.11'

repositories {
    mavenLocal()
    // maven { url "https://dl.bintray.com/bertramlabs/gomorpheus/" }
	mavenCentral()
}

configurations {
    provided
}
 
dependencies {
	api 'io.reactivex.rxjava3:rxjava:3.1.7'
	api 'commons-codec:commons-codec:1.13'
	api 'org.apache.httpcomponents:httpclient:4.5.14'
	api 'org.apache.httpcomponents:httpcore:4.4.15'
	api 'org.apache.httpcomponents:httpmime:4.5.13'
	api 'com.github.seancfoley:ipaddress:5.4.1'
	api "org.slf4j:slf4j-parent:$slf4jVersion"
	api 'com.github.jknack:handlebars:4.3.1'
	api "org.slf4j:slf4j-api:1.7.26"
	api 'org.bouncycastle:bcprov-jdk18on:1.78'
	implementation 'javax.servlet:javax.servlet-api:3.0.1'
	implementation "org.codehaus.groovy:groovy:$groovyVersion"
	implementation "org.codehaus.groovy:groovy-json:$groovyVersion"
  implementation "org.codehaus.groovy:groovy-xml:$groovyVersion"
	implementation "org.codehaus.groovy:groovy-console:$groovyVersion"
	compileOnly('com.morpheusdata:cypher-core:0.10.0')
	implementation 'commons-net:commons-net:3.9.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'

	//implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
	implementation 'commons-net:commons-net:3.9.0'
	provided("com.bertramlabs.plugins:karman-core:${karmanVersion}") {
		exclude module: 'groovy-all'
	}

	testImplementation "org.codehaus.groovy:groovy-all:$groovyVersion"
	testImplementation "org.spockframework:spock-core:$spockVersion"
	testImplementation 'cglib:cglib-nodep:3.3.0'
	testImplementation 'org.objenesis:objenesis:3.1'
	testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
}

java {
	withSourcesJar()
	withJavadocJar()
}

task morpheusJavaDoc(type: Javadoc) {
  source = sourceSets.main.allJava
  title = "Morpheus Core Docs"
}

publishing {
    publications {
        maven(MavenPublication) {
            artifactId 'morpheus-plugin-api'
			version project.version
            pom.withXml {
                asNode().children().last() + {
                    resolveStrategy = Closure.DELEGATE_FIRST
                    name 'morpheus-plugin-api'
                    description 'Morpheus Core provides the core framework for implementing extension plugins for the morpheus platform'
                    url 'https://github.com/bertramdev/morpheus-core'
                    scm {
                        url 'https://github.com/bertramdev/morpheus-core'
                        connection 'scm:https://bertramdev@github.com/gomorpheus/morpheus-core.git'
                        developerConnection 'scm:git://github.com/gomorpheus/morpheus-core.git'
                    }
                    licenses {
                        license {
                            name 'The Apache Software License, Version 2.0'
                            url 'http://www.apache.org/license/LICENSE-2.0.txt'
                            distribution 'repo'
                        }
                    }
                    developers {
                        developer {
                            id 'davydotcom'
                            name 'David Estes'
                            email 'davydotcom@gmail.com'
                        }
                    }
                }
            }
            from components.java
        }
    }

    repositories {
        maven {
            if( !isReleaseVersion ) {
                url = "https://nexus.bertramlabs.com/content/repositories/snapshots"
                if(project.hasProperty('labsNexusUser')) {
                    credentials {
                        username = labsNexusUser
                        password = labsNexusPassword
                    }
                }  else {
					credentials {
						username = System.getenv('LABS_NEXUS_USER')
						password = System.getenv('LABS_NEXUS_PASSWORD')
					}
				}
            }
        }
    }
}

javadoc {
    title = 'Morpheus Plugin API'
    options.addBooleanOption('html5', true)
    // options.addBooleanOption "-no-module-directories", true
    
    // Additional options for customization
    options.addBooleanOption('splitindex', true)
    options.addBooleanOption('use', true)
    options.addStringOption('windowtitle', 'Morpheus Plugin API')
    
    // Finalize with custom post-processing
    finalizedBy 'customizeJavadoc'
}

task customizeJavadoc {
    description = 'Post-process Javadoc to add custom header, footer, and HPE JS'
    dependsOn javadoc
    
    doLast {
        def javadocDir = file("$buildDir/docs/javadoc")
        
        
        // Process all HTML files
        javadocDir.eachFileRecurse { file ->
            if (file.name.endsWith('.html')) {
                def content = file.text
                
                // Add external JS files to head section
                def headCloseIndex = content.indexOf('</head>')
                if (headCloseIndex > -1) {
                    def externalJs = '''
<!-- Custom Morpheus Javadoc JavaScript -->
<script src="https://h50007.www5.hpe.com/hfws-static/js/framework/jquery/v-3-6-0/jquery.js"></script>
<script src="https://h50007.www5.hpe.com/hfws/us/en/hpe/latest.r/root?contentType=js"></script>
'''
                    content = content.substring(0, headCloseIndex) + externalJs + content.substring(headCloseIndex)
                }
                
                // Add custom header div after body tag
                def bodyOpenIndex = content.indexOf('<body')
                if (bodyOpenIndex > -1) {
                    def bodyTagEndIndex = content.indexOf('>', bodyOpenIndex) + 1
                    def headerDiv = '''
<div id="header" class="header">
    <!-- HFWS will insert its header here -->
</div>
'''
                    content = content.substring(0, bodyTagEndIndex) + headerDiv + content.substring(bodyTagEndIndex)
                }
                
                // Add custom footer div before body close tag
                def bodyCloseIndex = content.lastIndexOf('</body>')
                if (bodyCloseIndex > -1) {
                    def footerDiv = '''
<div id="footer" class="footer">
    <!-- HFWS will insert its footer here -->
</div>
'''
                    content = content.substring(0, bodyCloseIndex) + footerDiv + content.substring(bodyCloseIndex)
                }
                
                file.text = content
            }
        }
        
        // Copy and merge custom stylesheet - append to default stylesheet
        def stylesheetFile = new File(javadocDir, 'stylesheet.css')
        def customStylesheet = file('src/main/javadoc/stylesheet.css')
        if (customStylesheet.exists()) {
            // Read the existing default stylesheet content
            def originalStylesheet = stylesheetFile.exists() ? stylesheetFile.text : ''
            
            // Append custom styles to the default stylesheet
            def customStyles = customStylesheet.text
            def appendedContent = originalStylesheet + '\n\n/* ========================================= */\n'
            appendedContent += '/* Custom Styles TO WORK WITH HPE HEADER/FOOTER */\n'
            appendedContent += '/* ========================================= */\n\n'
            appendedContent += customStyles
            
            stylesheetFile.text = appendedContent
            println "Custom stylesheet appended to default Javadoc stylesheet"
        }
        
        println "Javadoc customization completed. Custom header, footer, and JS files added."
    }
}


task(console, dependsOn: 'classes', type: JavaExec) {
  main = 'groovy.ui.Console'
  classpath = sourceSets.main.runtimeClasspath
}

task copyRuntimeLibs(type: Copy) {
    into "m2libs"
    from project.configurations.runtimeClasspath
}

test {
	useJUnitPlatform()
	testLogging {
		exceptionFormat = 'full'
		showStandardStreams = true
		events "started", "passed", "skipped", "failed"
	}
	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
}


